Bug 1279498 - Force WorkerPrivate->SetThread(nullptr) using a RAII, r=khuey